apps/books/audiobookshelf/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:2.35.1 # {"$imagepolicy": "flux-system:audiobookshelf"}
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: audiobooks
              mountPath: /audiobooks
            - name: podcasts
              mountPath: /podcasts
            - name: config
              mountPath: /config
            - name: metadata
              mountPath: /metadata

      volumes:
        - name: audiobooks
          persistentVolumeClaim:
            claimName: audiobookshelf-audiobooks
        - name: podcasts
          persistentVolumeClaim:
            claimName: audiobookshelf-podcasts
        - name: config
          persistentVolumeClaim:
            claimName: audiobookshelf-config
        - name: metadata
          persistentVolumeClaim:
            claimName: audiobookshelf-metadata
